style and place load button
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/css/app.css
+++ b/css/app.css
@@ -2,5 +2,15 @@ body{
   margin:0;
   padding: 0;
   background-color:#000;
-  background-image: url(../assets/images/background_selectfile.png);
+  background-image: url('../assets/images/background_selectfile.png');
+}
+a#fileselect{
+  width: 275px;
+  height: 84px;
+  display: block;
+  margin: 103px 0px 0px 73px;
+  background:transparent url('../assets/images/buttons/fileselect_base.png') center top no-repeat;
+}
+a#fileselect:hover{
+  background-image: url('../assets/images/buttons/fileselect_hover.png');
 }
