--- a/app/templates/selectFile.html
+++ b/app/templates/selectFile.html
@@ -1,3 +1,3 @@
 <div id="selectFile">
-  <a href="#" id="fileselect" (click)="doSomething();"></a>
+  <a href="#" id="fileselect" (click)="selectFile();"></a>
 </div>
