--- a/app/templates/selectFile.html
+++ b/app/templates/selectFile.html
@@ -1,4 +1,3 @@
 <div id="selectFile">
-  <a href="#" id="fileselect" (click)="selectFile();"></a>
+    <button id="fileselect" (click)="selectFile()"></button>
 </div>
-<router-outlet></router-outlet>
