character screen style
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -1,5 +1,7 @@
-<div>
-  character <br />
-  HP: {{ hp }} / {{ hpmax }}<br />
-  MP: {{ mp }} / {{ mpmax }}
+<div id="characterDiv">
+  <div style="margin:106px 0px 0px 220px;">
+    <h3>ALUCARD</h3>
+    HP: {{ hp }} / {{ hpmax }}<br />
+    MP: {{ mp }} / {{ mpmax }}
+  </div>
 </div>
