--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,8 +1,13 @@
+@@font-face {
+  font-family: 'Atomicsc';
+  src: url('../fonts/atomicsc.TTF') format('truetype')
+}
 body{
   margin:0px;
   padding: 0px;
   background-color:#000;
   color:#FFF;
+  font-family: 'Atomicsc';
 }
 div#selectFile{
     width: 100%;
@@ -10,6 +15,13 @@ div#selectFile{
     margin: 0px;
     overflow: auto;
     background-image: url('../images/background_selectfile.png');
+}
+div#characterDiv{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    overflow: auto;
+    background-image: url('../images/background_charmenu.png');
 }
 button#fileselect{
   width: 275px;
