add hearts to character component
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -2,6 +2,7 @@
   <div style="margin:106px 0px 0px 220px;">
     <h3>ALUCARD</h3>
     HP: {{ hp }} / {{ hpmax }}<br />
-    MP: {{ mp }} / {{ mpmax }}
+    MP: {{ mp }} / {{ mpmax }}<br />
+    HEARTS: {{ hearts }} / {{ heartmax }}
   </div>
 </div>
