character update with layout and font
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -1,14 +1,14 @@
 <div id="characterDiv">
-  <div style="margin:106px 0px 0px 220px;">
+  <div style="margin:106px 0px 0px 220px; width: 220px;">
     <h3>ALUCARD</h3>
-    HP: {{ hp }} / {{ hpmax }} <br />
-    MP: {{ mp }} / {{ mpmax }} <br />
-    HEARTS: {{ hearts }} / {{ heartmax }}
+    HP {{ hp }} / {{ hpmax }} <br />
+    MP {{ mp }} / {{ mpmax }} <br />
+    HEARTS {{ hearts }} / {{ heartmax }}
   </div>
-  <div style="margin:110px 0px 0px 80px;">
-    STR: {{ str }} <br />
-    CON: {{ con }} <br />
-    INT: {{ int }} <br />
-    LCK: {{ lck }}
+  <div style="margin:70px 0px 0px 80px; width: 220px;">
+    STR {{ str }} <br />
+    CON {{ con }} <br />
+    INT {{ int }} <br />
+    LCK {{ lck }}
   </div>
 </div>
