--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,13 +1,26 @@
-@@font-face {
-  font-family: 'Atomicsc';
-  src: url('../fonts/atomicsc.TTF') format('truetype')
+@font-face {
+  font-family: 'Fairfax';
+    src: url('../fonts/Fairfax.ttf') format('truetype');
+}
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'Fairfax';
+    src: url('../fonts/Fairfax.ttf') format('truetype');
+  }
 }
 body{
   margin:0px;
   padding: 0px;
   background-color:#000;
   color:#FFF;
-  font-family: 'Atomicsc';
+  font-size: 26px;
+  font-family: 'Fairfax';
+  line-height: 32px;
+}
+h3{
+  width: 100%;
+  text-align: center;
+  margin-bottom: 0px;
 }
 div#selectFile{
     width: 100%;
