can save file after editing
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -1,5 +1,5 @@
 <div id="characterDiv">
-  <form #alucardForm="ngForm" (ngSubmit)="logChanges()">
+  <form #alucardForm="ngForm" (ngSubmit)="updateFile()">
     <div style="margin:106px 0px 0px 220px; width: 220px;">
       <h3>ALUCARD</h3>
       HP <input type="number" id="hp" name="hp" [(ngModel)]="alucard.hp" #hp="ngModel"> /
