--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -17,7 +17,7 @@
     </div>
     <div style="width: 458px; height: 109px; position: absolute; margin: 10px 0px 0px 310px;">
         <img src="./images/buttons/overwrite_data.png" />
-        <button id="overwrite_yes" type="submit" (click)="updateFile()"></button>
+        <button id="overwrite_yes" type="submit"></button>
         <button id="overwrite_no" (click)="cancelSave()"></button>
     </div>
   </form>
