--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -21,4 +21,5 @@
         <button id="overwrite_no" (click)="cancelSave()"></button>
     </div>
   </form>
+  <button (click)="goToInventory()">Inventory</button>
 </div>
