--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -21,5 +21,7 @@
       LCK <input type="number" id="lck" name="lck" [(ngModel)]="alucard.LCK" #hp="ngModel">
     </div>
   </form>
-  <button (click)="goToInventory()">Inventory</button>
+  <div class="equipMenu">
+    <button (click)="goToInventory()">Equip</button>
+  </div>
 </div>
