--- a/app/css/app.css
+++ b/app/css/app.css
@@ -107,3 +107,25 @@ div.inventoryWrap{
 div.inventoryWrap input{
   float:right;
 }
+.equipMenu{
+  width:165px;
+  height:204px;
+  border: solid 2px white;
+  margin: -200px 0px 0px 350px;
+  position:fixed;
+}
+.equipMenu button{
+  display:block;
+  width:100%;
+  height: 20%;
+  float:left;
+  background: transparent;
+  color: #FFF;
+  border:none;
+  font-family: 'Fairfax';
+  font-size: 30px;
+}
+.equipMenu button:hover{
+  background: solid;
+  background-color: #580000;
+}
