map remaining inventory
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -5,7 +5,6 @@
         <button style="margin-top:0px;" id="overwrite_yes" type="submit"></button>
         <button style="margin-top:0px; margin-left:10px;" id="overwrite_no" (click)="cancelSave()"></button>
     </div>
-    <div class="inventoryWrap">emptyHand <input type="number" id="emptyHand" name="emptyHand" [(ngModel)]="inventory.emptyHand"></div>
     <div class="inventoryWrap">monsterVial_1 <input type="number" id="monsterVial_1" name="monsterVial_1" [(ngModel)]="inventory.monsterVial_1"></div>
     <div class="inventoryWrap">monsterVial_2 <input type="number" id="monsterVial_2" name="monsterVial_2" [(ngModel)]="inventory.monsterVial_2"></div>
     <div class="inventoryWrap">monsterVial_3 <input type="number" id="monsterVial_3" name="monsterVial_3" [(ngModel)]="inventory.monsterVial_3"></div>
@@ -174,5 +173,91 @@
     <div class="inventoryWrap">libraryCard <input type="number" id="libraryCard" name="libraryCard" [(ngModel)]="inventory.libraryCard"></div>
     <div class="inventoryWrap">alucartShield <input type="number" id="alucartShield" name="alucartShield" [(ngModel)]="inventory.alucartShield"></div>
     <div class="inventoryWrap">alucartSword <input type="number" id="alucartSword" name="alucartSword" [(ngModel)]="inventory.alucartSword"></div>
+    <div class="inventoryWrap">clothTunic<input type="number" id="clothTunic" name="clothTunic" [(ngModel)]="inventory.clothTunic"></div>
+    <div class="inventoryWrap">hideCuirass<input type="number" id="hideCuirass" name="hideCuirass" [(ngModel)]="inventory.hideCuirass"></div>
+    <div class="inventoryWrap">bronzeCuirass<input type="number" id="bronzeCuirass" name="bronzeCuirass" [(ngModel)]="inventory.bronzeCuirass"></div>
+    <div class="inventoryWrap">ironCuirass<input type="number" id="ironCuirass" name="ironCuirass" [(ngModel)]="inventory.ironCuirass"></div>
+    <div class="inventoryWrap">steelCuirass<input type="number" id="steelCuirass" name="steelCuirass" [(ngModel)]="inventory.steelCuirass"></div>
+    <div class="inventoryWrap">silverPlate<input type="number" id="silverPlate" name="silverPlate" [(ngModel)]="inventory.silverPlate"></div>
+    <div class="inventoryWrap">goldPlate<input type="number" id="goldPlate" name="goldPlate" [(ngModel)]="inventory.goldPlate"></div>
+    <div class="inventoryWrap">platinumMail<input type="number" id="platinumMail" name="platinumMail" [(ngModel)]="inventory.platinumMail"></div>
+    <div class="inventoryWrap">diamondPlate<input type="number" id="diamondPlate" name="diamondPlate" [(ngModel)]="inventory.diamondPlate"></div>
+    <div class="inventoryWrap">fireMail<input type="number" id="fireMail" name="fireMail" [(ngModel)]="inventory.fireMail"></div>
+    <div class="inventoryWrap">lightningMail<input type="number" id="lightningMail" name="lightningMail" [(ngModel)]="inventory.lightningMail"></div>
+    <div class="inventoryWrap">iceMail<input type="number" id="iceMail" name="iceMail" [(ngModel)]="inventory.iceMail"></div>
+    <div class="inventoryWrap">mirrorCuirass<input type="number" id="mirrorCuirass" name="mirrorCuirass" [(ngModel)]="inventory.mirrorCuirass"></div>
+    <div class="inventoryWrap">spikeBreakerArmor<input type="number" id="spikeBreakerArmor" name="spikeBreakerArmor" [(ngModel)]="inventory.spikeBreakerArmor"></div>
+    <div class="inventoryWrap">alucardArmor<input type="number" id="alucardArmor" name="alucardArmor" [(ngModel)]="inventory.alucardArmor"></div>
+    <div class="inventoryWrap">darkArmor<input type="number" id="darkArmor" name="darkArmor" [(ngModel)]="inventory.darkArmor"></div>
+    <div class="inventoryWrap">healingMail<input type="number" id="healingMail" name="healingMail" [(ngModel)]="inventory.healingMail"></div>
+    <div class="inventoryWrap">holyArmor<input type="number" id="holyArmor" name="holyArmor" [(ngModel)]="inventory.holyArmor"></div>
+    <div class="inventoryWrap">walkArmor<input type="number" id="walkArmor" name="walkArmor" [(ngModel)]="inventory.walkArmor"></div>
+    <div class="inventoryWrap">brilliantArmor<input type="number" id="brilliantArmor" name="brilliantArmor" [(ngModel)]="inventory.brilliantArmor"></div>
+    <div class="inventoryWrap">mojoMail<input type="number" id="mojoMail" name="mojoMail" [(ngModel)]="inventory.mojoMail"></div>
+    <div class="inventoryWrap">furyPlate<input type="number" id="furyPlate" name="furyPlate" [(ngModel)]="inventory.furyPlate"></div>
+    <div class="inventoryWrap">draculaTunic<input type="number" id="draculaTunic" name="draculaTunic" [(ngModel)]="inventory.draculaTunic"></div>
+    <div class="inventoryWrap">godSGarb<input type="number" id="godSGarb" name="godSGarb" [(ngModel)]="inventory.godSGarb"></div>
+    <div class="inventoryWrap">axelordArmor<input type="number" id="axelordArmor" name="axelordArmor" [(ngModel)]="inventory.axelordArmor"></div>
+    <div class="inventoryWrap">sunglasses<input type="number" id="sunglasses" name="sunglasses" [(ngModel)]="inventory.sunglasses"></div>
+    <div class="inventoryWrap">ballroomMask<input type="number" id="ballroomMask" name="ballroomMask" [(ngModel)]="inventory.ballroomMask"></div>
+    <div class="inventoryWrap">bandanna<input type="number" id="bandanna" name="bandanna" [(ngModel)]="inventory.bandanna"></div>
+    <div class="inventoryWrap">feltHat<input type="number" id="feltHat" name="feltHat" [(ngModel)]="inventory.feltHat"></div>
+    <div class="inventoryWrap">velvetHat<input type="number" id="velvetHat" name="velvetHat" [(ngModel)]="inventory.velvetHat"></div>
+    <div class="inventoryWrap">goggles<input type="number" id="goggles" name="goggles" [(ngModel)]="inventory.goggles"></div>
+    <div class="inventoryWrap">leatherHat<input type="number" id="leatherHat" name="leatherHat" [(ngModel)]="inventory.leatherHat"></div>
+    <div class="inventoryWrap">holyGlasses<input type="number" id="holyGlasses" name="holyGlasses" [(ngModel)]="inventory.holyGlasses"></div>
+    <div class="inventoryWrap">steelHelm<input type="number" id="steelHelm" name="steelHelm" [(ngModel)]="inventory.steelHelm"></div>
+    <div class="inventoryWrap">stoneMask<input type="number" id="stoneMask" name="stoneMask" [(ngModel)]="inventory.stoneMask"></div>
+    <div class="inventoryWrap">circlet<input type="number" id="circlet" name="circlet" [(ngModel)]="inventory.circlet"></div>
+    <div class="inventoryWrap">goldCirclet<input type="number" id="goldCirclet" name="goldCirclet" [(ngModel)]="inventory.goldCirclet"></div>
+    <div class="inventoryWrap">rubyCirclet<input type="number" id="rubyCirclet" name="rubyCirclet" [(ngModel)]="inventory.rubyCirclet"></div>
+    <div class="inventoryWrap">opalCirclet<input type="number" id="opalCirclet" name="opalCirclet" [(ngModel)]="inventory.opalCirclet"></div>
+    <div class="inventoryWrap">topazCirclet<input type="number" id="topazCirclet" name="topazCirclet" [(ngModel)]="inventory.topazCirclet"></div>
+    <div class="inventoryWrap">berylCirclet<input type="number" id="berylCirclet" name="berylCirclet" [(ngModel)]="inventory.berylCirclet"></div>
+    <div class="inventoryWrap">catEyeCirclet<input type="number" id="catEyeCirclet" name="catEyeCirclet" [(ngModel)]="inventory.catEyeCirclet"></div>
+    <div class="inventoryWrap">coralCirclet<input type="number" id="coralCirclet" name="coralCirclet" [(ngModel)]="inventory.coralCirclet"></div>
+    <div class="inventoryWrap">dragonHelm<input type="number" id="dragonHelm" name="dragonHelm" [(ngModel)]="inventory.dragonHelm"></div>
+    <div class="inventoryWrap">silverCrown<input type="number" id="silverCrown" name="silverCrown" [(ngModel)]="inventory.silverCrown"></div>
+    <div class="inventoryWrap">wizardHat<input type="number" id="wizardHat" name="wizardHat" [(ngModel)]="inventory.wizardHat"></div>
+    <div class="inventoryWrap">clothCloak<input type="number" id="clothCloak" name="clothCloak" [(ngModel)]="inventory.clothCloak"></div>
+    <div class="inventoryWrap">reverseCloak<input type="number" id="reverseCloak" name="reverseCloak" [(ngModel)]="inventory.reverseCloak"></div>
+    <div class="inventoryWrap">elvenCloak<input type="number" id="elvenCloak" name="elvenCloak" [(ngModel)]="inventory.elvenCloak"></div>
+    <div class="inventoryWrap">crystalCloak<input type="number" id="crystalCloak" name="crystalCloak" [(ngModel)]="inventory.crystalCloak"></div>
+    <div class="inventoryWrap">royalCloak<input type="number" id="royalCloak" name="royalCloak" [(ngModel)]="inventory.royalCloak"></div>
+    <div class="inventoryWrap">bloodCloak<input type="number" id="bloodCloak" name="bloodCloak" [(ngModel)]="inventory.bloodCloak"></div>
+    <div class="inventoryWrap">josephsCloak<input type="number" id="josephsCloak" name="josephsCloak" [(ngModel)]="inventory.josephsCloak"></div>
+    <div class="inventoryWrap">twilightCloak<input type="number" id="twilightCloak" name="twilightCloak" [(ngModel)]="inventory.twilightCloak"></div>
+    <div class="inventoryWrap">moonstone<input type="number" id="moonstone" name="moonstone" [(ngModel)]="inventory.moonstone"></div>
+    <div class="inventoryWrap">sunstone<input type="number" id="sunstone" name="sunstone" [(ngModel)]="inventory.sunstone"></div>
+    <div class="inventoryWrap">bloodstone<input type="number" id="bloodstone" name="bloodstone" [(ngModel)]="inventory.bloodstone"></div>
+    <div class="inventoryWrap">staurolite<input type="number" id="staurolite" name="staurolite" [(ngModel)]="inventory.staurolite"></div>
+    <div class="inventoryWrap">ringOfPales<input type="number" id="ringOfPales" name="ringOfPales" [(ngModel)]="inventory.ringOfPales"></div>
+    <div class="inventoryWrap">zircon<input type="number" id="zircon" name="zircon" [(ngModel)]="inventory.zircon"></div>
+    <div class="inventoryWrap">aquamarine<input type="number" id="aquamarine" name="aquamarine" [(ngModel)]="inventory.aquamarine"></div>
+    <div class="inventoryWrap">turquiose<input type="number" id="turquiose" name="turquiose" [(ngModel)]="inventory.turquiose"></div>
+    <div class="inventoryWrap">onyx<input type="number" id="onyx" name="onyx" [(ngModel)]="inventory.onyx"></div>
+    <div class="inventoryWrap">garnet<input type="number" id="garnet" name="garnet" [(ngModel)]="inventory.garnet"></div>
+    <div class="inventoryWrap">opal<input type="number" id="opal" name="opal" [(ngModel)]="inventory.opal"></div>
+    <div class="inventoryWrap">diamond<input type="number" id="diamond" name="diamond" [(ngModel)]="inventory.diamond"></div>
+    <div class="inventoryWrap">lapisLazuli<input type="number" id="lapisLazuli" name="lapisLazuli" [(ngModel)]="inventory.lapisLazuli"></div>
+    <div class="inventoryWrap">ringOfAres<input type="number" id="ringOfAres" name="ringOfAres" [(ngModel)]="inventory.ringOfAres"></div>
+    <div class="inventoryWrap">goldRing<input type="number" id="goldRing" name="goldRing" [(ngModel)]="inventory.goldRing"></div>
+    <div class="inventoryWrap">silverRing<input type="number" id="silverRing" name="silverRing" [(ngModel)]="inventory.silverRing"></div>
+    <div class="inventoryWrap">ringOfVarda<input type="number" id="ringOfVarda" name="ringOfVarda" [(ngModel)]="inventory.ringOfVarda"></div>
+    <div class="inventoryWrap">ringOfArcana<input type="number" id="ringOfArcana" name="ringOfArcana" [(ngModel)]="inventory.ringOfArcana"></div>
+    <div class="inventoryWrap">mysticPendant<input type="number" id="mysticPendant" name="mysticPendant" [(ngModel)]="inventory.mysticPendant"></div>
+    <div class="inventoryWrap">heartBrooch<input type="number" id="heartBrooch" name="heartBrooch" [(ngModel)]="inventory.heartBrooch"></div>
+    <div class="inventoryWrap">necklaceOfJ<input type="number" id="necklaceOfJ" name="necklaceOfJ" [(ngModel)]="inventory.necklaceOfJ"></div>
+    <div class="inventoryWrap">gauntlet<input type="number" id="gauntlet" name="gauntlet" [(ngModel)]="inventory.gauntlet"></div>
+    <div class="inventoryWrap">ankhOfLife<input type="number" id="ankhOfLife" name="ankhOfLife" [(ngModel)]="inventory.ankhOfLife"></div>
+    <div class="inventoryWrap">ringOfFeanor<input type="number" id="ringOfFeanor" name="ringOfFeanor" [(ngModel)]="inventory.ringOfFeanor"></div>
+    <div class="inventoryWrap">medal<input type="number" id="medal" name="medal" [(ngModel)]="inventory.medal"></div>
+    <div class="inventoryWrap">talisman<input type="number" id="talisman" name="talisman" [(ngModel)]="inventory.talisman"></div>
+    <div class="inventoryWrap">duplicator<input type="number" id="duplicator" name="duplicator" [(ngModel)]="inventory.duplicator"></div>
+    <div class="inventoryWrap">kingsStone<input type="number" id="kingsStone" name="kingsStone" [(ngModel)]="inventory.kingsStone"></div>
+    <div class="inventoryWrap">covenantStone<input type="number" id="covenantStone" name="covenantStone" [(ngModel)]="inventory.covenantStone"></div>
+    <div class="inventoryWrap">nauglamir<input type="number" id="nauglamir" name="nauglamir" [(ngModel)]="inventory.nauglamir"></div>
+    <div class="inventoryWrap">secretBoots<input type="number" id="secretBoots" name="secretBoots" [(ngModel)]="inventory.secretBoots"></div>
+    <div class="inventoryWrap">alucartMail<input type="number" id="alucartMail" name="alucartMail" [(ngModel)]="inventory.alucartMail"></div>
   </form>
 </div>
