route to relics
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -23,5 +23,6 @@
   </form>
   <div class="equipMenu">
     <button (click)="goToInventory()">Equip</button>
+    <button (click)="goToRelics()">Relics</button>
   </div>
 </div>
